--- a/DopodCinema/Module/Movie/Cell/TopHorizontalCell.xib
+++ b/DopodCinema/Module/Movie/Cell/TopHorizontalCell.xib
@@ -30,8 +30,24 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
+                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="5" currentPage="2" translatesAutoresizingMaskIntoConstraints="NO" id="Ma3-p0-a1Q" customClass="CustomPageControl" customModule="DopodCinema" customModuleProvider="target">
+                        <rect key="frame" x="84.333333333333329" y="290" width="151.66666666666669" height="8"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="8" id="VYw-Sg-O18"/>
+                        </constraints>
+                        <color key="pageIndicatorTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="currentPageIndicatorTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="image" keyPath="activeDot" value="ic_active_dot"/>
+                            <userDefinedRuntimeAttribute type="image" keyPath="inactiveDot" value="ic_dot_nav"/>
+                            <userDefinedRuntimeAttribute type="image" keyPath="currentPageImage" value="ic_active_dot"/>
+                            <userDefinedRuntimeAttribute type="image" keyPath="otherPagesImage" value="ic_dot_nav"/>
+                        </userDefinedRuntimeAttributes>
+                    </pageControl>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Ma3-p0-a1Q" firstAttribute="top" secondItem="ES6-nG-Squ" secondAttribute="bottom" constant="10" id="5zn-5C-6oz"/>
+                    <constraint firstItem="Ma3-p0-a1Q" firstAttribute="centerX" secondItem="ES6-nG-Squ" secondAttribute="centerX" id="9fH-rV-Xez"/>
                     <constraint firstAttribute="trailing" secondItem="ES6-nG-Squ" secondAttribute="trailing" id="HcW-jq-vt5"/>
                     <constraint firstItem="ES6-nG-Squ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="fzd-oB-nKQ"/>
                     <constraint firstAttribute="bottom" secondItem="ES6-nG-Squ" secondAttribute="bottom" constant="10" id="m6J-lc-qtG"/>
@@ -42,8 +58,13 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="collectionView" destination="ES6-nG-Squ" id="swQ-zm-LyG"/>
+                <outlet property="pageControl" destination="Ma3-p0-a1Q" id="TM2-r4-8Be"/>
             </connections>
             <point key="canvasLocation" x="106.87022900763358" y="118.66197183098592"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="ic_active_dot" width="24" height="8"/>
+        <image name="ic_dot_nav" width="5" height="5"/>
+    </resources>
 </document>
