--- a/DopodCinema/Module/Movie/MovieDetail/MovieDetailViewController.xib
+++ b/DopodCinema/Module/Movie/MovieDetail/MovieDetailViewController.xib
@@ -12,8 +12,9 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieDetailViewController" customModule="DopodCinema" customModuleProvider="target">
             <connections>
                 <outlet property="arrowButton" destination="BYc-2N-jPc" id="c6w-m4-ciu"/>
-                <outlet property="checkoutLabel" destination="F3B-Sc-Gbl" id="8dV-Bp-BJ0"/>
+                <outlet property="checkoutLabel" destination="6Ov-lJ-VGh" id="hEM-AR-jVY"/>
                 <outlet property="checkoutView" destination="Ysw-Ey-A1T" id="p7X-hk-0hI"/>
+                <outlet property="clickCheckoutView" destination="h4U-Ft-EVY" id="btb-nb-7kO"/>
                 <outlet property="genresLabel" destination="jY4-NF-a9P" id="5a7-3C-b4j"/>
                 <outlet property="imageCollectionView" destination="xKW-aL-fV5" id="w7z-4W-3Wj"/>
                 <outlet property="movieScreenShotsLabel" destination="Yk5-KQ-zox" id="nKU-wG-lDt"/>
@@ -337,7 +338,7 @@
                             </constraints>
                         </scrollView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ysw-Ey-A1T">
-                            <rect key="frame" x="175" y="1385" width="239" height="83"/>
+                            <rect key="frame" x="173" y="1385" width="241" height="83"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BYc-2N-jPc">
                                     <rect key="frame" x="10" y="21.666666666666742" width="40" height="40"/>
@@ -351,33 +352,45 @@
                                         <action selector="didArrow" destination="-1" eventType="touchUpInside" id="gov-Zu-52A"/>
                                     </connections>
                                 </button>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_checkout" translatesAutoresizingMaskIntoConstraints="NO" id="UGE-e3-gF0">
-                                    <rect key="frame" x="50" y="7.6666666666667425" width="68" height="68"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h4U-Ft-EVY">
+                                    <rect key="frame" x="50" y="0.0" width="191" height="83"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_checkout" translatesAutoresizingMaskIntoConstraints="NO" id="uwq-XI-D63">
+                                            <rect key="frame" x="0.0" y="7.6666666666667425" width="68" height="68"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="68" id="M6L-7P-7F3"/>
+                                                <constraint firstAttribute="width" constant="68" id="ng6-TP-g7Y"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Check out movie showtime" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ov-lJ-VGh">
+                                            <rect key="frame" x="73" y="26" width="110" height="31.333333333333329"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="110" id="asG-zz-caZ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="68" id="B5a-xL-Buh"/>
-                                        <constraint firstAttribute="width" constant="68" id="Y0E-uq-m1x"/>
+                                        <constraint firstAttribute="trailing" secondItem="6Ov-lJ-VGh" secondAttribute="trailing" constant="8" id="FWw-9o-0Ks"/>
+                                        <constraint firstItem="uwq-XI-D63" firstAttribute="leading" secondItem="h4U-Ft-EVY" secondAttribute="leading" id="MBJ-Qh-OA6"/>
+                                        <constraint firstItem="6Ov-lJ-VGh" firstAttribute="centerY" secondItem="uwq-XI-D63" secondAttribute="centerY" id="OBD-n8-LGz"/>
+                                        <constraint firstItem="uwq-XI-D63" firstAttribute="centerY" secondItem="h4U-Ft-EVY" secondAttribute="centerY" id="pmc-jc-SRC"/>
+                                        <constraint firstItem="6Ov-lJ-VGh" firstAttribute="leading" secondItem="uwq-XI-D63" secondAttribute="trailing" constant="5" id="zg5-34-hai"/>
                                     </constraints>
-                                </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Check out movie showtime" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F3B-Sc-Gbl">
-                                    <rect key="frame" x="121" y="26" width="110" height="31.333333333333329"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="110" id="XY4-zY-4OR"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
+                                </view>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemIndigoColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="83" id="5nP-HH-POH"/>
-                                <constraint firstItem="UGE-e3-gF0" firstAttribute="leading" secondItem="BYc-2N-jPc" secondAttribute="trailing" id="Fad-ua-en4"/>
-                                <constraint firstItem="F3B-Sc-Gbl" firstAttribute="centerY" secondItem="Ysw-Ey-A1T" secondAttribute="centerY" id="HE9-uG-3rS"/>
-                                <constraint firstAttribute="trailing" secondItem="F3B-Sc-Gbl" secondAttribute="trailing" constant="8" id="M6z-hA-F9w"/>
+                                <constraint firstItem="h4U-Ft-EVY" firstAttribute="leading" secondItem="BYc-2N-jPc" secondAttribute="trailing" id="Bzq-Gw-ll5"/>
+                                <constraint firstAttribute="bottom" secondItem="h4U-Ft-EVY" secondAttribute="bottom" id="Kub-8R-zSX"/>
+                                <constraint firstAttribute="trailing" secondItem="h4U-Ft-EVY" secondAttribute="trailing" id="Pbl-nc-bOG"/>
                                 <constraint firstItem="BYc-2N-jPc" firstAttribute="centerY" secondItem="Ysw-Ey-A1T" secondAttribute="centerY" id="X71-H9-nv2"/>
-                                <constraint firstItem="F3B-Sc-Gbl" firstAttribute="leading" secondItem="UGE-e3-gF0" secondAttribute="trailing" constant="3" id="Yt7-EO-mkj"/>
+                                <constraint firstItem="h4U-Ft-EVY" firstAttribute="top" secondItem="Ysw-Ey-A1T" secondAttribute="top" id="XUH-Y8-DZM"/>
                                 <constraint firstItem="BYc-2N-jPc" firstAttribute="leading" secondItem="Ysw-Ey-A1T" secondAttribute="leading" constant="10" id="nRw-ym-IRq"/>
-                                <constraint firstItem="UGE-e3-gF0" firstAttribute="centerY" secondItem="Ysw-Ey-A1T" secondAttribute="centerY" id="uDg-j1-DtT"/>
                             </constraints>
                         </view>
                     </subviews>
