--- a/DopodCinema/Module/Movie/MovieDetail/MovieDetailViewController.xib
+++ b/DopodCinema/Module/Movie/MovieDetail/MovieDetailViewController.xib
@@ -16,6 +16,10 @@
                 <outlet property="checkoutView" destination="Ysw-Ey-A1T" id="p7X-hk-0hI"/>
                 <outlet property="clickCheckoutView" destination="h4U-Ft-EVY" id="btb-nb-7kO"/>
                 <outlet property="genresLabel" destination="jY4-NF-a9P" id="5a7-3C-b4j"/>
+                <outlet property="heightImageView" destination="792-RQ-YwK" id="2pn-yA-3qu"/>
+                <outlet property="heightSimilarView" destination="wME-5e-ChJ" id="hXX-iz-aSa"/>
+                <outlet property="heightStartingView" destination="DZd-cd-XQ4" id="GJz-Ir-pYB"/>
+                <outlet property="heightTrailerView" destination="sPN-cP-aEx" id="GLn-rU-1hI"/>
                 <outlet property="imageCollectionView" destination="xKW-aL-fV5" id="w7z-4W-3Wj"/>
                 <outlet property="movieScreenShotsLabel" destination="Yk5-KQ-zox" id="nKU-wG-lDt"/>
                 <outlet property="nameLabel" destination="I4a-dV-Aus" id="T08-IV-AZf"/>
@@ -49,7 +53,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PWi-br-6Qf">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="1408.3333333333333"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="1384.3333333333333"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rA3-1N-T16">
                                             <rect key="frame" x="44" y="16" width="326" height="434.66666666666669"/>
@@ -160,7 +164,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ydM-Hj-454">
-                                            <rect key="frame" x="0.0" y="604" width="414" height="195.33333333333337"/>
+                                            <rect key="frame" x="0.0" y="604" width="414" height="171.33333333333337"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Trailers" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ItZ-ma-KCB">
                                                     <rect key="frame" x="15.999999999999993" y="24" width="105.33333333333331" height="20.333333333333329"/>
@@ -198,25 +202,26 @@
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="aXE-hi-cEp" secondAttribute="trailing" id="7vN-4a-ZXa"/>
                                                 <constraint firstItem="ItZ-ma-KCB" firstAttribute="leading" secondItem="ydM-Hj-454" secondAttribute="leading" constant="16" id="E0A-9q-KRC"/>
-                                                <constraint firstAttribute="bottom" secondItem="aXE-hi-cEp" secondAttribute="bottom" constant="24" id="JAn-gd-o7Q"/>
+                                                <constraint firstAttribute="bottom" secondItem="aXE-hi-cEp" secondAttribute="bottom" id="JAn-gd-o7Q"/>
                                                 <constraint firstAttribute="trailing" secondItem="XaS-iw-bWP" secondAttribute="trailing" constant="16" id="Pii-GR-FP5"/>
                                                 <constraint firstItem="XaS-iw-bWP" firstAttribute="centerY" secondItem="ItZ-ma-KCB" secondAttribute="centerY" id="YDk-fj-5Qh"/>
                                                 <constraint firstItem="aXE-hi-cEp" firstAttribute="leading" secondItem="ydM-Hj-454" secondAttribute="leading" id="hYV-CJ-xk1"/>
                                                 <constraint firstItem="ItZ-ma-KCB" firstAttribute="top" secondItem="ydM-Hj-454" secondAttribute="top" constant="24" id="m2f-8R-48d"/>
                                                 <constraint firstItem="aXE-hi-cEp" firstAttribute="top" secondItem="ItZ-ma-KCB" secondAttribute="bottom" constant="10" id="m6e-jV-Qj7"/>
+                                                <constraint firstAttribute="height" constant="171.33333333333337" id="sPN-cP-aEx"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ITK-Db-c1w">
-                                            <rect key="frame" x="0.0" y="799.33333333333337" width="414" height="204.33333333333337"/>
+                                            <rect key="frame" x="0.0" y="775.33333333333337" width="414" height="204.33333333333337"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Screenshots" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yk5-KQ-zox">
-                                                    <rect key="frame" x="16" y="0.0" width="145" height="20.333333333333332"/>
+                                                    <rect key="frame" x="16" y="24" width="145" height="20.333333333333329"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xKW-aL-fV5">
-                                                    <rect key="frame" x="0.0" y="30.333333333333258" width="414" height="150"/>
+                                                    <rect key="frame" x="0.0" y="54.333333333333258" width="414" height="150"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="150" id="fN6-pc-nn9"/>
@@ -231,8 +236,9 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="Yk5-KQ-zox" firstAttribute="top" secondItem="ITK-Db-c1w" secondAttribute="top" id="C9Q-dB-ZQ2"/>
-                                                <constraint firstAttribute="bottom" secondItem="xKW-aL-fV5" secondAttribute="bottom" constant="24" id="Cry-mr-H09"/>
+                                                <constraint firstAttribute="height" constant="204.33333333333337" id="792-RQ-YwK"/>
+                                                <constraint firstItem="Yk5-KQ-zox" firstAttribute="top" secondItem="ITK-Db-c1w" secondAttribute="top" constant="24" id="C9Q-dB-ZQ2"/>
+                                                <constraint firstAttribute="bottom" secondItem="xKW-aL-fV5" secondAttribute="bottom" id="Cry-mr-H09"/>
                                                 <constraint firstAttribute="trailing" secondItem="xKW-aL-fV5" secondAttribute="trailing" id="O1t-FP-r7J"/>
                                                 <constraint firstItem="xKW-aL-fV5" firstAttribute="leading" secondItem="ITK-Db-c1w" secondAttribute="leading" id="UXF-Hf-TzB"/>
                                                 <constraint firstItem="Yk5-KQ-zox" firstAttribute="leading" secondItem="ITK-Db-c1w" secondAttribute="leading" constant="16" id="eWk-5n-OEn"/>
@@ -240,16 +246,16 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="exF-vJ-fRu">
-                                            <rect key="frame" x="0.0" y="1003.6666666666666" width="414" height="140.33333333333337"/>
+                                            <rect key="frame" x="0.0" y="979.66666666666663" width="414" height="140.33333333333337"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Starting" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xfa-dc-wYG">
-                                                    <rect key="frame" x="16.000000000000004" y="0.0" width="60.333333333333343" height="20.333333333333332"/>
+                                                    <rect key="frame" x="16.000000000000004" y="24" width="60.333333333333343" height="20.333333333333329"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="s6W-xw-0T3">
-                                                    <rect key="frame" x="0.0" y="30.333333333333371" width="414" height="86"/>
+                                                    <rect key="frame" x="0.0" y="54.333333333333371" width="414" height="86"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="86" id="zHS-sG-uin"/>
@@ -265,15 +271,16 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="s6W-xw-0T3" secondAttribute="trailing" id="2Gw-6n-rz2"/>
-                                                <constraint firstAttribute="bottom" secondItem="s6W-xw-0T3" secondAttribute="bottom" constant="24" id="5xg-HG-Dby"/>
+                                                <constraint firstAttribute="bottom" secondItem="s6W-xw-0T3" secondAttribute="bottom" id="5xg-HG-Dby"/>
+                                                <constraint firstAttribute="height" constant="140.33333333333337" id="DZd-cd-XQ4"/>
                                                 <constraint firstItem="s6W-xw-0T3" firstAttribute="leading" secondItem="exF-vJ-fRu" secondAttribute="leading" id="Gpi-tf-giu"/>
-                                                <constraint firstItem="Xfa-dc-wYG" firstAttribute="top" secondItem="exF-vJ-fRu" secondAttribute="top" id="a8n-TO-a0t"/>
+                                                <constraint firstItem="Xfa-dc-wYG" firstAttribute="top" secondItem="exF-vJ-fRu" secondAttribute="top" constant="24" id="a8n-TO-a0t"/>
                                                 <constraint firstItem="Xfa-dc-wYG" firstAttribute="leading" secondItem="exF-vJ-fRu" secondAttribute="leading" constant="16" id="kN2-3X-z0W"/>
                                                 <constraint firstItem="s6W-xw-0T3" firstAttribute="top" secondItem="Xfa-dc-wYG" secondAttribute="bottom" constant="10" id="vfS-5k-nmB"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sSW-ha-eld">
-                                            <rect key="frame" x="0.0" y="1154" width="414" height="204.33333333333326"/>
+                                            <rect key="frame" x="0.0" y="1130" width="414" height="204.33333333333326"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Similar Movies" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zxI-2y-2bF">
                                                     <rect key="frame" x="16.000000000000007" y="0.0" width="109.66666666666669" height="20.333333333333332"/>
@@ -303,6 +310,7 @@
                                                 <constraint firstItem="zxI-2y-2bF" firstAttribute="leading" secondItem="sSW-ha-eld" secondAttribute="leading" constant="16" id="UTU-Ek-gy7"/>
                                                 <constraint firstItem="zxI-2y-2bF" firstAttribute="top" secondItem="sSW-ha-eld" secondAttribute="top" id="ZyK-oK-Ffu"/>
                                                 <constraint firstItem="fxY-nZ-PlN" firstAttribute="top" secondItem="zxI-2y-2bF" secondAttribute="bottom" constant="10" id="ik1-rZ-J6g"/>
+                                                <constraint firstAttribute="height" constant="204.33333333333326" id="wME-5e-ChJ"/>
                                             </constraints>
                                         </view>
                                     </subviews>
